Cleaning up help messages for command-line options, and removing a few obsolete options too.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -146,16 +146,21 @@ CTL_SystemFileSystem=Default System
 CTL_Reg=Registered Version
 CTL_Nonreg=Non-Commercial Version
 
-# TopManager's startup info
-CTL_Cmd_options=Command Line Options:
-CTL_System_option=-system <dir>         System filesystem root - this is the filesystem
-CTL_System_option2=                      which contains the templates and projects
-CTL_UI_option=-ui <UI class name>   use given UI class as the IDE's Look&Feel
-CTL_FontSize_option=-fontsize <size>      use given number as the font size of the IDE user interface (11pt default)
-CTL_Locale_option=-locale <language[:country[:variant]]> use specified locale
-CTL_Branding_option=-branding <token>     use specified branding (- for default)
-CTL_Nologging_option=-nologging            do not create the log file
-CTL_Nosysclipboard_option=-nosysclipboard       use internal clipboard instead of system one
+# NonGui
+TEXT_help=\
+    Command-line options:\n\
+   \  -?                    show this help\n\
+   \  -h (or -help)         show launcher-specific options\n\
+   \  -ui <UI class name>   use given UI class as the IDE's Look & Feel\n\
+   \  -fontsize <size>      use given number as the base font size of the\n\
+   \                        IDE user interface, in points (11 default)\n\
+   \                        (but see http://ui.netbeans.org/docs/ui/themes/themes.html)\n\
+   \  -locale <language[:country[:variant]]> use specified locale\n\
+    Rarer options (definitely not supported!):\n\
+   \  -branding <token>     use specified branding (- for default)\n\
+   \  -nologging            do not create the log file\n\
+   \  -nosplash             do not show the splash screen\n\
+   \  -nogui                just start up internals, do not show GUI
 
 # error messages
 ERR_UIExpected=UI class name expected, using default UI...
