--- a/web.core/build.xml
+++ b/web.core/build.xml
@@ -85,6 +85,7 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${nb_root}/java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
         <pathelement location="${nb_root}/openidex/netbeans/modules/autoload/openidex.jar"/>
         <pathelement location="${nb_root}/j2eeserver/netbeans/modules/autoload/j2eeserver.jar"/>
+        <pathelement location="${nb_root}/projects/netbeans/modules/projects.jar"/>
 	<pathelement path="${nb_root}/xml/api/netbeans/modules/autoload/xml-api.jar" />
       </classpath>
     </javac>
