Fixing up Javadoc in java/api - there were many broken links etc.

--- a/api.java/build.xml
+++ b/api.java/build.xml
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -71,16 +71,7 @@ Microsystems, Inc. All Rights Reserved.
     </makenbm>
   </target>
   
-  <target name="javadoc" depends="clean-javadoc,java-support-apis">
-    <copy todir="javadoc">
-      <fileset dir=".">
-        <include name="JavaSupportAPIs/**"/>
-        <include name="JavaSupportAPIs.zip"/>
-      </fileset>
-    </copy>
-  </target>
-
-  <target name="java-support-apis">
+  <target name="javadoc">
     <property name="_cp" refid="cp"/>
     <ant dir="../../nbbuild" antfile="template.xml" target="javadoc">
 	<property name="javadoc.base" location="."/>
@@ -90,83 +81,8 @@ Microsystems, Inc. All Rights Reserved.
 	<property name="javadoc.packages" value="org.netbeans.api.java.classpath"/>
 	<property name="javadoc.classpath" value="${_cp}"/>
 	<property name="javadoc.main.page" value="org/netbeans/api/java/classpath/doc-files/api.html"/>
+        <!-- XXX include doc/doc-files/overview.html when possible -->
     </ant>
-  </target>
-
-  <target name="java-support-apis2">
-    <delete dir="JavaSupportAPIs"/>
-    <mkdir dir="JavaSupportAPIs"/>
-    <tstamp/>
-    <property name="java-api-footer" 
-      value="&lt;font size=-2 color=gray&gt;Built on ${TODAY}.&amp;nbsp;&amp;nbsp|&amp;nbsp;&amp;nbsp;Portions Copyright 2002, Sun Microsystems, Inc."/>
-    <javadoc 
-	destdir="JavaSupportAPIs" 
-	packagenames="org.netbeans.api.java.classpath"
-	doctitle="NetBeans Java Support APIs"
-	windowtitle="NetBeans Java Support APIs"
-	overview="doc/doc-files/overview.html"
-	bottom="${java-api-footer}"
-    >
-	<group 
-	    title="&lt;a href=&quot;@TOP@org/netbeans/api/java/classpath/api.html&quot;>Java ClassPath APIs&lt;/a>" 
-	    packages="org.netbeans.api.java.classpath"
-	/>
-	<sourcepath>
-	    <pathelement location="src"/>
-	    <pathelement location="doc"/>
-	</sourcepath>
-    	<classpath>
-	    <fileset dir="${nb_all}/openide/netbeans/lib">
-		<include name="openide*.jar"/>
-	    </fileset>
-	</classpath>
-
-	<!-- Links to external documentations -->
-	<link href="${jdk-docs-location}"
-	    offline="true"
-	    packagelistLoc="doc/external/jdk"
-	/>	
-	<link href="${openide-docs-location}"
-	    offline="true"
-	    packagelistLoc="${openide.package-list.loc}"
-	/>	
-    </javadoc>
-    <copy todir="JavaSupportAPIs">
-	<fileset dir="doc">
-	    <exclude name="external/**"/>
-	    <exclude name="**/CVS"/>
-	</fileset>
-    </copy>
-    <replace dir="JavaSupportAPIs" token="@jdk-docs@" value="${jdk-docs-location}">
-	<include name="**/*.html"/>
-    </replace>
-    <replace dir="JavaSupportAPIs" token="@openide-docs@" value="${openide-docs-location}">
-	<include name="**/*.html"/>
-    </replace>
-    <replace dir="JavaSupportAPIs" token="@TOP@" value="">
-	<include name="overview-summary.html"/>
-    </replace>
-    <replace dir="JavaSupportAPIs" token="@TOP@" value="../../../../">
-	<include name="*/*/*/*/*.html"/>
-    </replace>
-    <replace dir="JavaSupportAPIs" token="@TOP@" value="../../../../../">
-	<include name="*/*/*/*/*/*.html"/>
-    </replace>
-    <replace dir="JavaSupportAPIs" token="@FOOTER@" value="${java-api-footer}">
-	<include name="**/*.html"/>
-    </replace>
-    <replace dir="JavaSupportAPIs" token="@DATE@" value="${TODAY}">
-	<include name="**/*.html"/>
-    </replace>
-    <zip zipfile="JavaSupportAPIs.zip" basedir="JavaSupportAPIs"/>
-  </target>
-
-  <target name="real-clean" depends="clean,clean-javadoc"/>
-
-  <target name="clean-javadoc">
-    <delete dir="JavaSupportAPIs"/>
-    <delete dir="javadoc"/>
-    <delete file="JavaSupportAPIs.zip"/>
   </target>
 
   <target name="clean">
@@ -179,6 +95,7 @@ Microsystems, Inc. All Rights Reserved.
     <delete file="java-api.nbm"/>
     <delete dir="netbeans"/>
     <delete dir="Info"/>
+    <delete dir="javadoc"/>
   </target>
   
   <target name="apichanges-check">
@@ -190,5 +107,3 @@ Microsystems, Inc. All Rights Reserved.
   </target>
   
 </project>
-
-
