Don't use bundle keys from other module.

--- a/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
@@ -112,3 +112,13 @@ EXC_JspParserNotInstalled=The JSP parser module is not installed
 PROP_DSCB_debugsource=Stop in debugger
 
 HINT_DSCB_debugsource=Stop in debugger
+
+#ServletEditor - following two keys copied from org.openide.text.Bundle
+# {0} = name of the data object
+# {1} = file name with package
+CTL_ObjectOpen=Opening {0} ...
+
+# {0} = name of the data object
+# {1} = file name with package
+CTL_ObjectOpened=
+
