--- a/utilities/src/org/netbeans/modules/search/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/search/Bundle.properties
@@ -120,6 +120,9 @@ TEXT_LABEL_NAME_MNEM=N
 ACS_ListView=N/A
 ACS_TREEVIEW=N/A
 
+# settings
+Services/org-netbeans-modules-search-SearchProjectSettings.settings=Search Settings
+
 # filenames
 Services/SearchType/org-netbeans-modules-search-FullTextType.settings=Full Text
 Services/SearchType/org-netbeans-modules-search-ModificationDateType.settings=Date
@@ -133,3 +136,5 @@ Templates/Services/SearchType/org-netbeans-modules-search-ObjectNameType.setting
 
 ACS_DIALOG_DESC=Dialog for searching by criteria
 TEXT_BUTTON_SHOW_TOOLTIP=Locates and highlights the file in Explorer.
+
+TEXT_Search_settings=Search Settings
