--- a/apisupport.ant/src/org/netbeans/modules/apisupport/ant/TemplateNames.properties
+++ b/apisupport.ant/src/org/netbeans/modules/apisupport/ant/TemplateNames.properties
@@ -10,6 +10,7 @@
 # Microsystems, Inc. All Rights Reserved.
 
 Templates/API_Support/Modules_API/AntScript.xml=Ant Script for Module
+Mount/Javadoc/org-netbeans-modules-apisupport-ant-nbantext-javadoc.xml=NetBeans Ant Tasks
 
 # manifest
 OpenIDE-Module-Name=Ant Extensions for Open APIs Support
