--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -188,9 +188,11 @@ CTL_FileSystemPanel.jarRadioButton.text_Mnemonic=J
 LAB_FileSystemPanel.jarLabel.text=JAR File:
 LAB_FileSystemPanel.jarLabel.text_Mnemonic=F
 LAB_FileSystemPanel.jarPathLabel.text=Not Used
-CTL_FileSystemPanel.browse=Browse...
-CTL_FileSystemPanel.browse1_Mnemonic=B
-CTL_FileSystemPanel.browse2_Mnemonic=R
+CTL_FileSystemPanel.browseDirButton.text=Browse...
+CTL_FileSystemPanel.browseDirButton.text_Mnemonic=B
+CTL_FileSystemPanel.browseJarButton.text=Browse...
+CTL_FileSystemPanel.browseJarButton.text_Mnemonic=R
+CTL_FileSystemPanel.browseJarButton.hint=Browse...
 CTL_FileSystemPanel.otherRadioButton.text=Add (other file system type)
 CTL_FileSystemPanel.otherRadioButton.text_Mnemonic=O
 LAB_FileSystemPanel.createLabel.text=Type:
