#24693 Do not rewrite just modified files.

--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -132,6 +132,7 @@ PROP_fileName=File:
 PROP_replaceMsg=File {0}.{1} already exists.\n Do you want to replace it?
 # {0} - file name (including extension)
 MSG_cannot_create_data=Cannot create {0}.\nSpecify a valid file name. Do not enter path to a different directory.
+BK0001=Target file is modified. Save it please before reinvoking this action.
 
 ## ValidatingTextField.java
 MSG_invalid=Invalid value entered.
