bugfix of #31247 Some actions have not standard names.

--- a/editor/src/org/netbeans/modules/editor/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/Bundle.properties
@@ -28,3 +28,5 @@ MSG_OutOfRange=Value is out of range
 CTL_Toolbar_name={0} Toolbar
 CTL_Toolbar_hint=Toolbar contents customization
 PROP_addToolbarSeparator=Add Separator
+
+generate-goto-popup=Generate Goto Popup
