bugfix #31286, label "NetBeans" changed to "IDE" because a branded version

--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -109,12 +109,12 @@ LBL_UseProxyServer_Mnemonic=U
 LBL_SDI_Mnemonic=S
 LBL_MDI_Mnemonic=M
 LBL_AdvancedCheckBox_Mnemonic=A
-LBL_IDEPanelName=General NetBeans Settings
+LBL_IDEPanelName=General IDE Settings
 LBL_UseProxyServer=Use HTTP Proxy Server
 LBL_SDI=Multiple Smaller Windows Mode ("SDI")
 LBL_MDI=Full Screen Mode ("MDI")
 LBL_Server_Name=Proxy Server Name:
-LBL_Head=Set general NetBeans settings on this page.
+LBL_Head=Set general IDE settings on this page.
 LBL_Port=Port:
 LBL_WindowMode=Window Mode:
 LBL_WebProxy=Web Proxy:
