#30089 low level annotation added.

--- a/xml.tax/src/org/netbeans/modules/xml/tax/cookies/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/cookies/Bundle.properties
@@ -13,6 +13,7 @@
 ## TreeEditorCookieImpl.java
 MSG_Unexpected_exception_in_parser_or_handler=Unexpected exception in parser or handler.
 MSG_Unexpected_exception_in_merge=Unexpected exception in merge.
+BK0001=Cannot load the document!
 
 ## TreeRepresentation.java
 PROP_Tree_representation=Tree representation
