--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
@@ -22,7 +22,7 @@ CatalogCustomizer.locationLabel.mne=U
 ACSD_locationTextField=URL pointing to the catalog file
 
 PROP_choose_file=Browse...
-MNE_file=F
+MNE_file=B
 ACSD_file=Button selecting local file
 HINT_pp=Prefer public IDs over system IDs during entity resolution.
 
