Add tasklist/javaparser to the list of tasklist modules built on the daily alpha update center.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -122,6 +122,7 @@ local.config.tasklist=tasklist/api, \
 	tasklist/usertasks, \
 	tasklist/editor, \
 	tasklist/javadoc, \
+	tasklist/javaparser, \
 	tasklist/bugs
 
 local.config.vcsprofiles=vcsgeneric/profiles/cvsprofiles, \
