--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -62,21 +62,27 @@ FMT_DTDDoc=<!--- Put your DTDDoc comment here. -->
 MSG_file_err_1=Valid Java class name expected.
 SAXGeneratorFilePanel.Form.name=Output File Names
 SAXGeneratorCustomizer.interfaceLabel.text=Handler Interface:
-SAXGeneratorCustomizer.interfaceLabel.mne=I
 SAXGeneratorFilePanel.handlerImplLabel.text=Handler Implementation:
-SAXGeneratorFilePanel.handlerImplLabel.mne=H
 SAXGeneratorCustomizer.stubLabel.text=Generated Parser:
-SAXGeneratorCustomizer.stubLabel.mne=D
 SAXGeneratorCustomizer.parsletLabel.text=Data Convertor Interface:
-SAXGeneratorCustomizer.parsletLabel.mne="P"
 SAXGeneratorFilePanel.parsletImplLabel.text=Data Convertor Implementation:
-SAXGeneratorFilePanel.parsletImplLabel.mne=r
 PROP_save_it=\ Save Customized Bindings
 PROP_save_it_mnem=S
 PROP_bindings_label=Location:
-SAXGeneratorCustomizer.saveLabel.mne=L
 ACSD_SAXGeneratorFilePanel=Specify the names of the generated files. To save your customizations to the handler code generation for this DTD file, select the checkbox below. The bindings will be reloaded each time you run the wizard on this DTD file.
 DESC_saxw_files=Specify the names of the generated files. To save your customizations to the handler code generation for this DTD file, select the checkbox below. The bindings will be reloaded each time you run the wizard on this DTD file.
+# data convertors implemntation mnemonic
+BK0003=C
+# handler implementation mnemonic
+BK0004=m
+# data convertor interface mnemonics
+BK0005=t
+# location mnemonics
+BK0006=L
+# generated parser mnemonics
+BK0007=P
+# handler interface mnemonics
+BK0008=n
 
 ## SAXGeneratorMethodPanel.java
 SAXGeneratorMethodPanel.table.column1=Element (QName)
@@ -148,4 +154,5 @@ MSG_invalid_dtd=The DTD is not in good shape. Aborting generation.
 MSG_sax_progress_done=SAX parser handler generation finished.
 MSG_action_failed=Action failed due to internal error!
 
+# ---
 
