Removed xml/tree-edit from the build

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -110,7 +110,6 @@ local.config.xml=xml/api, \
         xml/catalog, \
         xml/tools, \
         xml/text-edit, \
-        xml/tree-edit, \
         xml/css, \
         xml/xsl, \
 	xml/schema
@@ -199,7 +198,8 @@ config.modules.bloated=${config.modules.stable-with-apisupport}, \
         ${local.config.tasklist}, \
         translatedfiles, \
         treefs, \
-        webl
+        webl, \
+        xml/tree-edit
 
 config.fixedmodules.bloated-plus-extrabins=${config.fixedmodules.bloated}
 config.modules.bloated-plus-extrabins=${config.modules.bloated}, \
@@ -249,6 +249,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         translatedfiles, \
         treefs, \
         webl, \
+        xml/tree-edit, \
         xtest
 
 # make javadoc for these packages
@@ -287,3 +288,9 @@ config.fixedmodules.sigtest=${config.fixedmodules.stable}
 config.modules.sigtest=${config.modules.stable}, \
         mdr, \
         openidex/looks
+
+
+config.modules.xml=${local.config.xml}, \
+        xml/tree-edit
+config.fixedmodules.xml=
+#${config.fixedmodules.platform}
