--- a/xsl/build.xml
+++ b/xsl/build.xml
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -44,6 +44,7 @@ Microsystems, Inc. All Rights Reserved.
         <filter token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
         <ant dir="${nbroot}/xml/external" target="unscramble"/>
+        <ant dir="${nbroot}/libs/external" target="unscramble"/>
     </target>
 
     <target name="compile">
