adding projects module among modules which javadoc is published (#31426)

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -276,11 +276,12 @@ config.fixedmodules.javadoc=openide, \
         jellytools, \
         debuggercore/oldapi, \
         lexer, \
-        openidex/looks, \
         mdr, \
+        openidex/looks, \
+        projects, \
+        tasklist/api, \
         vcscore, \
-        xml/api, \
-	tasklist/api
+        xml/api
 config.modules.javadoc=
 
 # configuration for signature test builds
