reverting my last commit; no api no javadoc (see discussion in #31426 for details)

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -276,12 +276,11 @@ config.fixedmodules.javadoc=openide, \
         jellytools, \
         debuggercore/oldapi, \
         lexer, \
-        mdr, \
         openidex/looks, \
-        projects, \
-        tasklist/api, \
+        mdr, \
         vcscore, \
-        xml/api
+        xml/api, \
+	tasklist/api
 config.modules.javadoc=
 
 # configuration for signature test builds
